# Moofish

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/data/: crates.rs  mod.rs  words.rs
src/printer/: enums.rs  mod.rs  traits.rs
src/printer/cargo/: cargo.rs  compile.rs  mod.rs
src/printer/cargo/data/: crates.rs  mod.rs
src/printer/pip/: download.rs  mod.rs
src/printer/tar/: extract.rs  mod.rs
