[package]
name = "moofish"
version = "0.1.0"
edition = "2021"

[lib]
name = "moofish"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "moofish"
path = "src/bin/cli.rs"


[[bin]]
name = "stdin-show"
path = "src/bin/stdin_show.rs"


[dependencies]
rand = { version = "0.8.*" }
rand_xorshift = { version = "0.3.*" }
clap = { version = "4.5.*", features = ["derive"] }